# Age-Calculator-Program

./: .env.example.prod  .pre-commit-config.yaml  CHANGELOG.md  README.md  app.py  app.spec  build.bat  build.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: app.py
src/constants/: messages.py
src/core/: age_calculator.py
src/models/: InterfaceApp.py
src/ui/: interface_app.py  styles.py
src/ui/components/: labeled_entry.py
src/ui/views/: main_view.py
src/utils/: constants.py  helpers.py  messages.py  styles.py  tkinter_exception_hook.py
test/: InterfaceApp_test.py  conftest.py
test/test_configs/: test_default_config.py  test_development_config.py  test_production_config.py  test_testing_config.py
test/test_constants/: test_messages.py
test/test_core/: test_age_calculator.py
test/test_models/: test_InterfaceApp.py  test_interface_app.py
test/test_ui/: test_interface_app.py  test_styles.py
test/test_ui/test_components/: test_labeled_entry.py
test/test_ui/test_views/: test_main_view.py
test/test_utils/: test_helpers.py
tests/test_configs/: test_default_config.py  test_development_config.py  test_logger_config.py  test_production_config.py  test_testing_config.py
tests/test_constants/: test_messages.py
tests/test_ui/: test_interface_app.py  test_styles.py
tests/test_ui/test_components/: test_labeled_entry.py
tests/test_ui/test_views/: test_main_view.py
tests/test_utils/: test_dialogs.py  test_error_handler.py  test_helpers.py  test_tkinter_exception_hook.py
